delete redundant model print methods
note that the only changes needed to pass existing tests is 4 snapshot updates, where `"Model "` is added preceding `"Specification"` in the header.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,39 +49,10 @@ S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
 S3method(predict_survival,model_fit)
 S3method(predict_time,model_fit)
-S3method(print,C5_rules)
-S3method(print,bag_mars)
-S3method(print,bag_tree)
-S3method(print,bart)
-S3method(print,boost_tree)
 S3method(print,control_parsnip)
-S3method(print,cubist_rules)
-S3method(print,decision_tree)
-S3method(print,discrim_flexible)
-S3method(print,discrim_linear)
-S3method(print,discrim_quad)
-S3method(print,discrim_regularized)
-S3method(print,gen_additive_mod)
-S3method(print,linear_reg)
-S3method(print,logistic_reg)
-S3method(print,mars)
-S3method(print,mlp)
 S3method(print,model_fit)
 S3method(print,model_spec)
-S3method(print,multinom_reg)
-S3method(print,naive_Bayes)
-S3method(print,nearest_neighbor)
 S3method(print,nullmodel)
-S3method(print,pls)
-S3method(print,poisson_reg)
-S3method(print,proportional_hazards)
-S3method(print,rand_forest)
-S3method(print,rule_fit)
-S3method(print,surv_reg)
-S3method(print,survival_reg)
-S3method(print,svm_linear)
-S3method(print,svm_poly)
-S3method(print,svm_rbf)
 S3method(req_pkgs,model_fit)
 S3method(req_pkgs,model_spec)
 S3method(required_pkgs,model_fit)
@@ -256,6 +227,7 @@ export(predict_survival.model_fit)
 export(predict_time)
 export(predict_time.model_fit)
 export(prepare_data)
+export(print_model_spec)
 export(proportional_hazards)
 export(rand_forest)
 export(repair_call)
