use `pillar::type_sum` rather than `tibble::type_sum`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -313,6 +313,7 @@ importFrom(hardhat,frequency_weights)
 importFrom(hardhat,importance_weights)
 importFrom(hardhat,tune)
 importFrom(magrittr,"%>%")
+importFrom(pillar,type_sum)
 importFrom(purrr,"%||%")
 importFrom(purrr,as_vector)
 importFrom(purrr,imap)
@@ -366,7 +367,6 @@ importFrom(stats,update)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
 importFrom(tibble,tibble)
-importFrom(tibble,type_sum)
 importFrom(tidyr,gather)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
