--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ export(C5.0_train)
 export(C5_rules)
 export(add_rowindex)
 export(augment)
+export(auto_ml)
 export(autoplot)
 export(bag_mars)
 export(bag_tree)
