--- a/.github/workflows/old-tensorflow.yaml
+++ b/.github/workflows/old-tensorflow.yaml
@@ -49,7 +49,7 @@ jobs:
           extra-packages: rcmdcheck
 
       - name: Install dev reticulate
-        run: pak::pkg_install('rstudio/reticulate')
+        run: pak::pkg_install('reticulate')
         shell: Rscript {0}
 
       - name: Install Miniconda
