--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ S3method(req_pkgs,model_fit)
 S3method(req_pkgs,model_spec)
 S3method(required_pkgs,model_fit)
 S3method(required_pkgs,model_spec)
+S3method(set_args,model_spec)
 S3method(set_engine,model_spec)
 S3method(set_mode,model_spec)
 S3method(tidy,"_LiblineaR")
