Make userfacing set_* functions generic (#769)
* make set_engine generic

* make set_mode generic

* make set_args generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,9 @@ S3method(req_pkgs,model_fit)
 S3method(req_pkgs,model_spec)
 S3method(required_pkgs,model_fit)
 S3method(required_pkgs,model_spec)
+S3method(set_args,model_spec)
+S3method(set_engine,model_spec)
+S3method(set_mode,model_spec)
 S3method(tidy,"_LiblineaR")
 S3method(tidy,"_elnet")
 S3method(tidy,"_fishnet")
