--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,8 +57,11 @@ S3method(req_pkgs,model_fit)
 S3method(req_pkgs,model_spec)
 S3method(required_pkgs,model_fit)
 S3method(required_pkgs,model_spec)
+S3method(set_args,default)
 S3method(set_args,model_spec)
+S3method(set_engine,default)
 S3method(set_engine,model_spec)
+S3method(set_mode,default)
 S3method(set_mode,model_spec)
 S3method(tidy,"_LiblineaR")
 S3method(tidy,"_elnet")
