add condense_control function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,6 +155,7 @@ export(check_empty_ellipse)
 export(check_final_param)
 export(check_model_doesnt_exist)
 export(check_model_exists)
+export(condense_control)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
