--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
 S3method(update,C5_rules)
 S3method(update,bag_mars)
+S3method(update,bag_mlp)
 S3method(update,bag_tree)
 S3method(update,bart)
 S3method(update,boost_tree)
@@ -146,6 +147,7 @@ export(augment)
 export(auto_ml)
 export(autoplot)
 export(bag_mars)
+export(bag_mlp)
 export(bag_tree)
 export(bart)
 export(bartMachine_interval_calc)
