--- a/NAMESPACE
+++ b/NAMESPACE
@@ -283,6 +283,7 @@ export(svm_rbf)
 export(tidy)
 export(translate)
 export(translate.default)
+export(tunable.survival_reg)
 export(tune)
 export(update_dot_check)
 export(update_engine_parameters)
