--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ S3method(translate,survival_reg)
 S3method(translate,svm_linear)
 S3method(translate,svm_poly)
 S3method(translate,svm_rbf)
+S3method(tunable,survival_reg)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
 S3method(update,C5_rules)
@@ -283,7 +284,6 @@ export(svm_rbf)
 export(tidy)
 export(translate)
 export(translate.default)
-export(tunable.survival_reg)
 export(tune)
 export(update_dot_check)
 export(update_engine_parameters)
@@ -313,6 +313,7 @@ importFrom(generics,fit_xy)
 importFrom(generics,glance)
 importFrom(generics,required_pkgs)
 importFrom(generics,tidy)
+importFrom(generics,tunable)
 importFrom(generics,varying_args)
 importFrom(ggplot2,autoplot)
 importFrom(glue,glue_collapse)
