export extension check helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -250,6 +250,7 @@ export(predict_time)
 export(predict_time.model_fit)
 export(prepare_data)
 export(print_model_spec)
+export(prompt_missing_implementation)
 export(proportional_hazards)
 export(rand_forest)
 export(repair_call)
@@ -275,6 +276,8 @@ export(show_call)
 export(show_engines)
 export(show_fit)
 export(show_model_info)
+export(spec_is_loaded)
+export(spec_is_possible)
 export(stan_conf_int)
 export(surv_reg)
 export(survival_reg)
