make lightgbm's `num_leaves` engine arg tunable

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Imports:
 Suggests: 
     C50,
     covr,
-    dials (>= 0.1.0),
+    dials (>= 1.0.0.9001),
     earth,
     ggrepel,
     keras,
@@ -76,3 +76,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 Config/testthat/edition: 3
 RoxygenNote: 7.2.1.9000
+Remotes: 
+    tidymodels/dials#256
