ad extract_fit_time.model_fit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(augment,model_fit)
 S3method(extract_fit_engine,model_fit)
+S3method(extract_fit_time,model_fit)
 S3method(extract_parameter_dials,model_spec)
 S3method(extract_parameter_set_dials,model_spec)
 S3method(extract_spec_parsnip,model_fit)
@@ -171,6 +172,7 @@ export(discrim_quad)
 export(discrim_regularized)
 export(eval_args)
 export(extract_fit_engine)
+export(extract_fit_time)
 export(extract_parameter_dials)
 export(extract_parameter_set_dials)
 export(extract_spec_parsnip)
@@ -320,6 +322,7 @@ importFrom(generics,varying_args)
 importFrom(ggplot2,autoplot)
 importFrom(glue,glue_collapse)
 importFrom(hardhat,extract_fit_engine)
+importFrom(hardhat,extract_fit_time)
 importFrom(hardhat,extract_parameter_dials)
 importFrom(hardhat,extract_parameter_set_dials)
 importFrom(hardhat,extract_spec_parsnip)
