--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,7 +90,18 @@ S3method(translate,survival_reg)
 S3method(translate,svm_linear)
 S3method(translate,svm_poly)
 S3method(translate,svm_rbf)
+S3method(tunable,boost_tree)
+S3method(tunable,decision_tree)
+S3method(tunable,linear_reg)
+S3method(tunable,logistic_reg)
+S3method(tunable,mars)
+S3method(tunable,mlp)
+S3method(tunable,model_spec)
+S3method(tunable,multinomial_reg)
+S3method(tunable,rand_forest)
 S3method(tunable,survival_reg)
+S3method(tunable,svm_poly)
+S3method(tune_args,model_spec)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
 S3method(update,C5_rules)
@@ -287,7 +298,9 @@ export(svm_rbf)
 export(tidy)
 export(translate)
 export(translate.default)
+export(tunable)
 export(tune)
+export(tune_args)
 export(update_dot_check)
 export(update_engine_parameters)
 export(update_main_parameters)
@@ -317,6 +330,7 @@ importFrom(generics,glance)
 importFrom(generics,required_pkgs)
 importFrom(generics,tidy)
 importFrom(generics,tunable)
+importFrom(generics,tune_args)
 importFrom(generics,varying_args)
 importFrom(ggplot2,autoplot)
 importFrom(glue,glue_collapse)
