add methods for `glmnetfit` objects
there objects result from using base-R families

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(has_multi_predict,workflow)
 S3method(multi_predict,"_C5.0")
 S3method(multi_predict,"_earth")
 S3method(multi_predict,"_elnet")
+S3method(multi_predict,"_glmnetfit")
 S3method(multi_predict,"_lognet")
 S3method(multi_predict,"_multnet")
 S3method(multi_predict,"_torch_mlp")
@@ -27,15 +28,18 @@ S3method(multi_predict_args,model_fit)
 S3method(multi_predict_args,workflow)
 S3method(nullmodel,default)
 S3method(predict,"_elnet")
+S3method(predict,"_glmnetfit")
 S3method(predict,"_lognet")
 S3method(predict,"_multnet")
 S3method(predict,censoring_model_reverse_km)
 S3method(predict,model_fit)
 S3method(predict,model_spec)
 S3method(predict,nullmodel)
+S3method(predict_class,"_glmnetfit")
 S3method(predict_class,"_lognet")
 S3method(predict_class,"_multnet")
 S3method(predict_class,model_fit)
+S3method(predict_classprob,"_glmnetfit")
 S3method(predict_classprob,"_lognet")
 S3method(predict_classprob,"_multnet")
 S3method(predict_classprob,model_fit)
@@ -43,9 +47,11 @@ S3method(predict_confint,model_fit)
 S3method(predict_hazard,model_fit)
 S3method(predict_linear_pred,model_fit)
 S3method(predict_numeric,"_elnet")
+S3method(predict_numeric,"_glmnetfit")
 S3method(predict_numeric,model_fit)
 S3method(predict_quantile,model_fit)
 S3method(predict_raw,"_elnet")
+S3method(predict_raw,"_glmnetfit")
 S3method(predict_raw,"_lognet")
 S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
