--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
 export("%>%")
+export(.check_censored_right)
 export(.check_glmnet_penalty_fit)
 export(.check_glmnet_penalty_predict)
 export(.cols)
@@ -146,7 +147,10 @@ export(.convert_form_to_xy_new)
 export(.convert_xy_to_form_fit)
 export(.convert_xy_to_form_new)
 export(.dat)
+export(.extract_surv_status)
+export(.extract_surv_time)
 export(.facts)
+export(.is_censored_right)
 export(.lvls)
 export(.model_param_name_key)
 export(.obs)
