update lifecycle badges via `usethis::use_lifecycle()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -345,6 +345,7 @@ importFrom(hardhat,extract_spec_parsnip)
 importFrom(hardhat,frequency_weights)
 importFrom(hardhat,importance_weights)
 importFrom(hardhat,tune)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(pillar,type_sum)
 importFrom(purrr,"%||%")
