--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 1.0.4.9002
 Authors@R: c(
     person("Max", "Kuhn", , "max@posit.co", role = c("aut", "cre")),
     person("Davis", "Vaughan", , "davis@posit.co", role = "aut"),
-    person("Emil", "Hvitfeldt", , "emilhhvitfeldt@gmail.com", role = "ctb"),
+    person("Emil", "Hvitfeldt", , "emil.hvitfeldt@posit.co", role = "ctb"),
     person("Posit Software, PBC", role = c("cph", "fnd"))
   )
 Maintainer: Max Kuhn <max@posit.co>
