add helper for bridging causal fits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,9 @@ S3method(update,svm_rbf)
 S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
+S3method(weight_propensity,default)
+S3method(weight_propensity,model_fit)
+S3method(weight_propensity,model_spec)
 export("%>%")
 export(.censoring_weights_graf)
 export(.check_glmnet_penalty_fit)
@@ -315,6 +318,7 @@ export(update_model_info_file)
 export(update_spec)
 export(varying)
 export(varying_args)
+export(weight_propensity)
 export(xgb_predict)
 export(xgb_train)
 importFrom(dplyr,arrange)
