add pkgdown entry

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -92,6 +92,7 @@ reference:
       - translate
       - starts_with("update")
       - matches("_train")
+      - starts_with("weight_propensity")
 
   - title: Developer tools
     contents:
