--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(predict,"_elnet")
 S3method(predict,"_glmnetfit")
 S3method(predict,"_lognet")
 S3method(predict,"_multnet")
+S3method(predict,censoring_model)
 S3method(predict,censoring_model_reverse_km)
 S3method(predict,model_fit)
 S3method(predict,model_spec)
@@ -61,6 +62,7 @@ S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
 S3method(predict_survival,model_fit)
 S3method(predict_time,model_fit)
+S3method(print,censoring_model)
 S3method(print,control_parsnip)
 S3method(print,model_fit)
 S3method(print,model_spec)
