export and document some helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,8 @@ export(.convert_form_to_xy_new)
 export(.convert_xy_to_form_fit)
 export(.convert_xy_to_form_new)
 export(.dat)
+export(.extract_surv_status)
+export(.extract_surv_time)
 export(.facts)
 export(.lvls)
 export(.model_param_name_key)
@@ -307,6 +309,7 @@ export(svm_linear)
 export(svm_poly)
 export(svm_rbf)
 export(tidy)
+export(time_as_binary_event)
 export(translate)
 export(translate.default)
 export(tune)
