move roxygen2 to other file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,3 +77,209 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Collate: 
+    'C5_rules_C5.0.R'
+    'aaa.R'
+    'aaa_models.R'
+    'aaa_multi_predict.R'
+    'aaa_spark_helpers.R'
+    'add_in.R'
+    'adds.R'
+    'arguments.R'
+    'augment.R'
+    'auto_ml.R'
+    'auto_ml_h2o.R'
+    'autoplot.R'
+    'bag_mars.R'
+    'bag_mars_earth.R'
+    'bag_mlp.R'
+    'bag_mlp_nnet.R'
+    'bag_tree.R'
+    'bag_tree_C5.0.R'
+    'bag_tree_rpart.R'
+    'bart.R'
+    'bart_data.R'
+    'bart_dbarts.R'
+    'boost_tree.R'
+    'boost_tree_C5.0.R'
+    'boost_tree_data.R'
+    'boost_tree_h2o.R'
+    'boost_tree_lightgbm.R'
+    'boost_tree_mboost.R'
+    'boost_tree_spark.R'
+    'boost_tree_xgboost.R'
+    'c5_rules.R'
+    'case_weights.R'
+    'condense_control.R'
+    'contr_one_hot.R'
+    'control_parsnip.R'
+    'convert_data.R'
+    'cubist_rules.R'
+    'cubist_rules_Cubist.R'
+    'data.R'
+    'decision_tree.R'
+    'decision_tree_C5.0.R'
+    'decision_tree_data.R'
+    'decision_tree_partykit.R'
+    'decision_tree_rpart.R'
+    'decision_tree_spark.R'
+    'descriptors.R'
+    'discrim_flexible.R'
+    'discrim_flexible_earth.R'
+    'discrim_linear.R'
+    'discrim_linear_MASS.R'
+    'discrim_linear_mda.R'
+    'discrim_linear_sda.R'
+    'discrim_linear_sparsediscrim.R'
+    'discrim_quad.R'
+    'discrim_quad_MASS.R'
+    'discrim_quad_sparsediscrim.R'
+    'discrim_regularized.R'
+    'discrim_regularized_klaR.R'
+    'engine_docs.R'
+    'engines.R'
+    'extract.R'
+    'fit.R'
+    'fit_control.R'
+    'fit_helpers.R'
+    'gen_additive_mod.R'
+    'gen_additive_mod_data.R'
+    'gen_additive_mod_mgcv.R'
+    'glmnet-engines.R'
+    'glmnet_details.R'
+    'grouped_binomial.R'
+    'install_packages.R'
+    'linear_reg.R'
+    'linear_reg_brulee.R'
+    'linear_reg_data.R'
+    'linear_reg_gee.R'
+    'linear_reg_glm.R'
+    'linear_reg_glmer.R'
+    'linear_reg_glmnet.R'
+    'linear_reg_gls.R'
+    'linear_reg_h2o.R'
+    'linear_reg_keras.R'
+    'linear_reg_lm.R'
+    'linear_reg_lme.R'
+    'linear_reg_lmer.R'
+    'linear_reg_spark.R'
+    'linear_reg_stan.R'
+    'linear_reg_stan_glmer.R'
+    'logistic_reg.R'
+    'logistic_reg_LiblineaR.R'
+    'logistic_reg_brulee.R'
+    'logistic_reg_data.R'
+    'logistic_reg_gee.R'
+    'logistic_reg_glm.R'
+    'logistic_reg_glmer.R'
+    'logistic_reg_glmnet.R'
+    'logistic_reg_h2o.R'
+    'logistic_reg_keras.R'
+    'logistic_reg_spark.R'
+    'logistic_reg_stan.R'
+    'logistic_reg_stan_glmer.R'
+    'mars.R'
+    'mars_data.R'
+    'mars_earth.R'
+    'misc.R'
+    'mlp.R'
+    'mlp_brulee.R'
+    'mlp_data.R'
+    'mlp_h2o.R'
+    'mlp_keras.R'
+    'mlp_nnet.R'
+    'model_object_docs.R'
+    'multinom_reg.R'
+    'multinom_reg_brulee.R'
+    'multinom_reg_data.R'
+    'multinom_reg_glmnet.R'
+    'multinom_reg_h2o.R'
+    'multinom_reg_keras.R'
+    'multinom_reg_nnet.R'
+    'multinom_reg_spark.R'
+    'naive_Bayes.R'
+    'naive_Bayes_h2o.R'
+    'naive_Bayes_klaR.R'
+    'naive_Bayes_naivebayes.R'
+    'nearest_neighbor.R'
+    'nearest_neighbor_data.R'
+    'nearest_neighbor_kknn.R'
+    'nullmodel.R'
+    'nullmodel_data.R'
+    'parsnip-package.R'
+    'partykit.R'
+    'pls.R'
+    'pls_mixOmics.R'
+    'poisson_reg.R'
+    'poisson_reg_gee.R'
+    'poisson_reg_glm.R'
+    'poisson_reg_glmer.R'
+    'poisson_reg_glmnet.R'
+    'poisson_reg_h2o.R'
+    'poisson_reg_hurdle.R'
+    'poisson_reg_stan.R'
+    'poisson_reg_stan_glmer.R'
+    'poisson_reg_zeroinfl.R'
+    'predict.R'
+    'predict_class.R'
+    'predict_classprob.R'
+    'predict_hazard.R'
+    'predict_interval.R'
+    'predict_linear_pred.R'
+    'predict_numeric.R'
+    'predict_quantile.R'
+    'predict_raw.R'
+    'predict_survival.R'
+    'predict_time.R'
+    'print.R'
+    'proportional_hazards.R'
+    'proportional_hazards_data.R'
+    'proportional_hazards_glmnet.R'
+    'proportional_hazards_survival.R'
+    'rand_forest.R'
+    'rand_forest_aorsf.R'
+    'rand_forest_data.R'
+    'rand_forest_h2o.R'
+    'rand_forest_partykit.R'
+    'rand_forest_randomForest.R'
+    'rand_forest_ranger.R'
+    'rand_forest_spark.R'
+    'reexports.R'
+    'repair_call.R'
+    'req_pkgs.R'
+    'required_pkgs.R'
+    'rule_fit.R'
+    'rule_fit_h2o.R'
+    'rule_fit_xrf.R'
+    'standalone-survival.R'
+    'surv_reg.R'
+    'surv_reg_data.R'
+    'surv_reg_flexsurv.R'
+    'surv_reg_survival.R'
+    'survival-censoring-model.R'
+    'survival-censoring-weights.R'
+    'survival-helpers.R'
+    'survival_reg.R'
+    'survival_reg_data.R'
+    'survival_reg_flexsurv.R'
+    'survival_reg_flexsurvspline.R'
+    'survival_reg_survival.R'
+    'svm_linear.R'
+    'svm_linear_LiblineaR.R'
+    'svm_linear_data.R'
+    'svm_linear_kernlab.R'
+    'svm_poly.R'
+    'svm_poly_data.R'
+    'svm_poly_kernlab.R'
+    'svm_rbf.R'
+    'svm_rbf_data.R'
+    'svm_rbf_kernlab.R'
+    'tidy.R'
+    'tidy_glmnet.R'
+    'tidy_liblinear.R'
+    'translate.R'
+    'tunable.R'
+    'tune_args.R'
+    'type_sum.R'
+    'update.R'
+    'varying.R'
