--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,7 @@ export(.model_param_name_key)
 export(.obs)
 export(.organize_glmnet_pred)
 export(.preds)
+export(.time_as_binary_event)
 export(.x)
 export(.y)
 export(C5.0_train)
@@ -309,7 +310,6 @@ export(svm_linear)
 export(svm_poly)
 export(svm_rbf)
 export(tidy)
-export(time_as_binary_event)
 export(translate)
 export(translate.default)
 export(tune)
