survival time to binary conversion (#973)
* export and document some helpers

* move roxygen2 to other file

* avoid collating info in description file

* update comments for posterity

* update news

* unit tests and update docs

* rename file to match corresponding R file

* capture code in snapshot

* tweak documentation

* update pkgdown index

* moving this test to the others in extratests

---------

Co-authored-by: Hannah Frick <hannah@rstudio.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,12 +157,15 @@ export(.convert_form_to_xy_new)
 export(.convert_xy_to_form_fit)
 export(.convert_xy_to_form_new)
 export(.dat)
+export(.extract_surv_status)
+export(.extract_surv_time)
 export(.facts)
 export(.lvls)
 export(.model_param_name_key)
 export(.obs)
 export(.organize_glmnet_pred)
 export(.preds)
+export(.time_as_binary_event)
 export(.x)
 export(.y)
 export(C5.0_train)
