--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ S3method(update,mlp)
 S3method(update,multinom_reg)
 S3method(update,naive_Bayes)
 S3method(update,nearest_neighbor)
+S3method(update,nearest_neighbor_adaptive)
 S3method(update,pls)
 S3method(update,poisson_reg)
 S3method(update,proportional_hazards)
@@ -248,6 +249,7 @@ export(multi_predict_args)
 export(multinom_reg)
 export(naive_Bayes)
 export(nearest_neighbor)
+export(nearest_neighbor_adaptive)
 export(new_model_spec)
 export(null_model)
 export(null_value)
