export and document case_weights_allowed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -178,6 +178,7 @@ export(bag_tree)
 export(bart)
 export(bartMachine_interval_calc)
 export(boost_tree)
+export(case_weights_allowed)
 export(cforest_train)
 export(check_empty_ellipse)
 export(check_final_param)
