export `check_args()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,29 @@ S3method(.censoring_weights_graf,model_fit)
 S3method(augment,model_fit)
 S3method(autoplot,glmnet)
 S3method(autoplot,model_fit)
+S3method(check_args,C5_rules)
+S3method(check_args,bag_tree)
+S3method(check_args,boost_tree)
+S3method(check_args,cubist_rules)
+S3method(check_args,decision_tree)
+S3method(check_args,default)
+S3method(check_args,discrim_flexible)
+S3method(check_args,discrim_linear)
+S3method(check_args,discrim_regularized)
+S3method(check_args,linear_reg)
+S3method(check_args,logistic_reg)
+S3method(check_args,mars)
+S3method(check_args,mlp)
+S3method(check_args,multinom_reg)
+S3method(check_args,nearest_neighbor)
+S3method(check_args,pls)
+S3method(check_args,poisson_reg)
+S3method(check_args,rand_forest)
+S3method(check_args,surv_reg)
+S3method(check_args,survival_reg)
+S3method(check_args,svm_linear)
+S3method(check_args,svm_poly)
+S3method(check_args,svm_rbf)
 S3method(extract_fit_engine,model_fit)
 S3method(extract_parameter_dials,model_spec)
 S3method(extract_parameter_set_dials,model_spec)
@@ -180,6 +203,7 @@ export(bartMachine_interval_calc)
 export(boost_tree)
 export(case_weights_allowed)
 export(cforest_train)
+export(check_args)
 export(check_empty_ellipse)
 export(check_final_param)
 export(condense_control)
