--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ S3method(predict_linear_pred,model_fit)
 S3method(predict_numeric,"_elnet")
 S3method(predict_numeric,"_glmnetfit")
 S3method(predict_numeric,model_fit)
+S3method(predict_predint,model_fit)
 S3method(predict_quantile,model_fit)
 S3method(predict_raw,"_elnet")
 S3method(predict_raw,"_glmnetfit")
@@ -283,12 +284,15 @@ export(pred_value_template)
 export(predict.model_fit)
 export(predict_class.model_fit)
 export(predict_classprob.model_fit)
+export(predict_confint)
 export(predict_confint.model_fit)
 export(predict_hazard.model_fit)
 export(predict_linear_pred)
 export(predict_linear_pred.model_fit)
 export(predict_numeric)
 export(predict_numeric.model_fit)
+export(predict_predint)
+export(predict_predint.model_fit)
 export(predict_quantile.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
