add missing glmnet method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ S3method(set_engine,model_spec)
 S3method(set_mode,default)
 S3method(set_mode,model_spec)
 S3method(tidy,"_LiblineaR")
+S3method(tidy,"_coxnet")
 S3method(tidy,"_elnet")
 S3method(tidy,"_fishnet")
 S3method(tidy,"_lognet")
