--- a/NAMESPACE
+++ b/NAMESPACE
@@ -350,6 +350,7 @@ export(varying)
 export(varying_args)
 export(xgb_predict)
 export(xgb_train)
+import(rlang)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
@@ -392,26 +393,6 @@ importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_lgl)
-importFrom(rlang,abort)
-importFrom(rlang,call2)
-importFrom(rlang,caller_env)
-importFrom(rlang,current_env)
-importFrom(rlang,enquo)
-importFrom(rlang,enquos)
-importFrom(rlang,eval_tidy)
-importFrom(rlang,expr)
-importFrom(rlang,get_expr)
-importFrom(rlang,is_empty)
-importFrom(rlang,is_missing)
-importFrom(rlang,is_null)
-importFrom(rlang,is_quosure)
-importFrom(rlang,is_symbolic)
-importFrom(rlang,lgl)
-importFrom(rlang,missing_arg)
-importFrom(rlang,quo_get_expr)
-importFrom(rlang,quos)
-importFrom(rlang,sym)
-importFrom(rlang,syms)
 importFrom(stats,.checkMFClasses)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
