--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     ggplot2,
     globals,
     glue,
-    hardhat (>= 1.2.0.9000),
+    hardhat (>= 1.3.1.9000),
     lifecycle,
     magrittr,
     pillar,
@@ -78,5 +78,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 Remotes:  
-    tidymodels/hardhat@extract_fit_time
+    tidymodels/hardhat
 RoxygenNote: 7.3.1
