add vec_quantiles for output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(extract_spec_parsnip,model_fit)
 S3method(fit,model_spec)
 S3method(fit_xy,gen_additive_mod)
 S3method(fit_xy,model_spec)
+S3method(format,vctrs_quantiles)
 S3method(glance,model_fit)
 S3method(has_multi_predict,default)
 S3method(has_multi_predict,model_fit)
@@ -280,6 +281,7 @@ export(new_model_spec)
 export(null_model)
 export(null_value)
 export(nullmodel)
+export(obj_print_footer.vctrs_quantiles)
 export(parsnip_addin)
 export(pls)
 export(poisson_reg)
@@ -350,6 +352,9 @@ export(update_model_info_file)
 export(update_spec)
 export(varying)
 export(varying_args)
+export(vec_ptype_abbr.vctrs_quantiles)
+export(vec_ptype_full.vctrs_quantiles)
+export(vec_quantiles)
 export(xgb_predict)
 export(xgb_train)
 import(rlang)
@@ -396,6 +401,9 @@ importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_lgl)
+importFrom(rlang,"!!!")
+importFrom(rlang,is_double)
+importFrom(rlang,is_list)
 importFrom(stats,.checkMFClasses)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
