--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,7 +68,7 @@ Suggests:
 VignetteBuilder: 
     knitr
 ByteCompile: true
-Config/Needs/website: C50, dbarts, earth, glmnet, keras, kernlab, kknn,
+Config/Needs/website: C50, dbarts, earth, glmnet, grf, keras, kernlab, kknn,
     LiblineaR, mgcv, nnet, parsnip, randomForest, ranger, rpart, rstanarm,
     tidymodels/tidymodels, tidyverse/tidytemplate, rstudio/reticulate,
     xgboost
