--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ S3method(multi_predict_args,default)
 S3method(multi_predict_args,model_fit)
 S3method(multi_predict_args,workflow)
 S3method(nullmodel,default)
+S3method(obj_print_footer,vctrs_quantiles)
 S3method(predict,"_elnet")
 S3method(predict,"_glmnetfit")
 S3method(predict,"_lognet")
@@ -281,7 +282,7 @@ export(new_model_spec)
 export(null_model)
 export(null_value)
 export(nullmodel)
-export(obj_print_footer.vctrs_quantiles)
+export(obj_print_footer)
 export(parsnip_addin)
 export(pls)
 export(poisson_reg)
@@ -434,5 +435,6 @@ importFrom(utils,globalVariables)
 importFrom(utils,head)
 importFrom(utils,methods)
 importFrom(utils,stack)
+importFrom(vctrs,obj_print_footer)
 importFrom(vctrs,vec_size)
 importFrom(vctrs,vec_unique)
