--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -90,6 +90,7 @@ reference:
       - set_engine
       - set_mode
       - show_engines
+      - sparse_data
       - tidy.model_fit
       - translate
       - starts_with("update")
