--- a/NAMESPACE
+++ b/NAMESPACE
@@ -355,6 +355,8 @@ export(update_model_info_file)
 export(update_spec)
 export(varying)
 export(varying_args)
+export(vec_ptype_abbr)
+export(vec_ptype_full)
 export(vec_quantiles)
 export(xgb_predict)
 export(xgb_train)
@@ -402,8 +404,6 @@ importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_lgl)
-importFrom(rlang,"!!!")
-importFrom(rlang,is_double)
 importFrom(stats,.checkMFClasses)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
@@ -435,5 +435,7 @@ importFrom(utils,head)
 importFrom(utils,methods)
 importFrom(utils,stack)
 importFrom(vctrs,obj_print_footer)
+importFrom(vctrs,vec_ptype_abbr)
+importFrom(vctrs,vec_ptype_full)
 importFrom(vctrs,vec_size)
 importFrom(vctrs,vec_unique)
