--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ S3method(extract_spec_parsnip,model_fit)
 S3method(fit,model_spec)
 S3method(fit_xy,gen_additive_mod)
 S3method(fit_xy,model_spec)
-S3method(format,parsnip_quantiles)
+S3method(format,quantile_pred)
 S3method(glance,model_fit)
 S3method(has_multi_predict,default)
 S3method(has_multi_predict,model_fit)
@@ -55,7 +55,7 @@ S3method(multi_predict_args,default)
 S3method(multi_predict_args,model_fit)
 S3method(multi_predict_args,workflow)
 S3method(nullmodel,default)
-S3method(obj_print_footer,parsnip_quantiles)
+S3method(obj_print_footer,quantile_pred)
 S3method(predict,"_elnet")
 S3method(predict,"_glmnetfit")
 S3method(predict,"_lognet")
@@ -174,8 +174,8 @@ S3method(update,svm_rbf)
 S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
-S3method(vec_ptype_abbr,parsnip_quantiles)
-S3method(vec_ptype_full,parsnip_quantiles)
+S3method(vec_ptype_abbr,quantile_pred)
+S3method(vec_ptype_full,quantile_pred)
 export("%>%")
 export(.censoring_weights_graf)
 export(.check_glmnet_penalty_fit)
@@ -286,7 +286,6 @@ export(null_value)
 export(nullmodel)
 export(obj_print_footer)
 export(parsnip_addin)
-export(parsnip_quantiles)
 export(pls)
 export(poisson_reg)
 export(pred_value_template)
@@ -313,6 +312,7 @@ export(prepare_data)
 export(print_model_spec)
 export(prompt_missing_implementation)
 export(proportional_hazards)
+export(quantile_pred)
 export(rand_forest)
 export(repair_call)
 export(req_pkgs)
