--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(.censoring_weights_graf,default)
 S3method(.censoring_weights_graf,model_fit)
+S3method(as.matrix,quantile_pred)
 S3method(as_tibble,quantile_pred)
 S3method(augment,model_fit)
 S3method(autoplot,glmnet)
@@ -232,6 +233,7 @@ export(extract_fit_engine)
 export(extract_fit_time)
 export(extract_parameter_dials)
 export(extract_parameter_set_dials)
+export(extract_quantile_levels)
 export(extract_spec_parsnip)
 export(find_engine_files)
 export(fit)
