fix two bugs in brulee tunable methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,7 +132,7 @@ S3method(tunable,logistic_reg)
 S3method(tunable,mars)
 S3method(tunable,mlp)
 S3method(tunable,model_spec)
-S3method(tunable,multinomial_reg)
+S3method(tunable,multinom_reg)
 S3method(tunable,rand_forest)
 S3method(tunable,survival_reg)
 S3method(tunable,svm_poly)
