--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,6 +68,8 @@ Suggests:
 VignetteBuilder: 
     knitr
 ByteCompile: true
+Remote:
+    tidymodels/hardhat
 Config/Needs/website: C50, dbarts, earth, glmnet, keras, kernlab, kknn,
     LiblineaR, mgcv, nnet, parsnip, randomForest, ranger, rpart, rstanarm,
     tidymodels/tidymodels, tidyverse/tidytemplate, rstudio/reticulate,
