quantile regression updates for new hardhat model (#1207)
* bump hardhat version

* remove parts now in hardhat

* update for new hardhat version

* quantile_levels (plural now)

* news update

* typo

* rename helper function

* run CI on PRs from branches

* forgotten remote

* actions for edited PRs

* plural

* expand branch list

* export function for censored to use

* updated snapshot

* remake snapshot

* Revert "remake snapshot"

This reverts commit 954e32676bfe5cf97d553d77ea62e49610d7f630.

* updated snapshot

* Update R/arguments.R

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* typo

* changes from reviewer feedback

---------

Co-authored-by: ‘topepo’ <‘mxkuhn@gmail.com’>
Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     ggplot2,
     globals,
     glue,
-    hardhat (>= 1.4.0),
+    hardhat (>= 1.4.0.9002),
     lifecycle,
     magrittr,
     pillar,
@@ -68,6 +68,8 @@ Suggests:
 VignetteBuilder: 
     knitr
 ByteCompile: true
+Remotes:
+    tidymodels/hardhat
 Config/Needs/website: C50, dbarts, earth, glmnet, keras, kernlab, kknn,
     LiblineaR, mgcv, nnet, parsnip, randomForest, ranger, rpart, rstanarm,
     tidymodels/tidymodels, tidyverse/tidytemplate, rstudio/reticulate,
