--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [main, master]
   pull_request:
-    branches: [main, master, quantile-mode]
+    branches: [main, master]
   workflow_dispatch:
 
 name: R-CMD-check.yaml
