--- a/NAMESPACE
+++ b/NAMESPACE
@@ -377,6 +377,7 @@ importFrom(generics,tune_args)
 importFrom(generics,varying_args)
 importFrom(ggplot2,autoplot)
 importFrom(glue,glue_collapse)
+importFrom(hardhat,contr_one_hot)
 importFrom(hardhat,extract_fit_engine)
 importFrom(hardhat,extract_fit_time)
 importFrom(hardhat,extract_parameter_dials)
